Add batches
