# backend/src/routes/commons.routes.ts
@@ -6,5 +6,6 @@ import { asyncHandler } from "../middleware/asyncHandler.js";
 const router = Router();
 router.get("/file-info", asyncHandler(commonsController.getFileInfo));
 router.get("/random-file", asyncHandler(commonsController.getRandomFile));
+router.post("/batch-file-info", asyncHandler(commonsController.batchFileInfo));
 router.post("/save-captions", asyncHandler(commonsController.saveCaptions));
 export default router;
